--- a/env_intro.tex
+++ b/env_intro.tex
@@ -22,8 +22,10 @@
 \setreplacements[eka]
 
 %
-% Einstellungen für unit und digits
+% Einstellungen für unit, digits und spaceddigits
 %
+
+\let\spaceddigitssymbol,
 \setdigitmode {3} \setdigitorder{0} % kleiner 1000er Trenner, Komma
 \setupunits[method=3]
 
