Hervorhebungen: Narrower und Sidebar.

--- a/Intro/prd_intro.tex
+++ b/Intro/prd_intro.tex
@@ -34,6 +34,7 @@ intent=ISO coated v2 300\letterpercent\space (ECI)]
 \component [c11_Aufzählung]
 \component [c13_Beschreibungslisten]
 \component [c15_Textformatierungen]
+\component [c16_Hervorhebungen]
 \component [c17_Textgrößen]
 \component [c19_Typing]
 \component [c21_Textausrichtung]
