Mehrspaltensatz funktioniert nicht im Hauptdokument.

--- a/Intro/prd_intro.tex
+++ b/Intro/prd_intro.tex
@@ -46,6 +46,7 @@ intent=ISO coated v2 300\letterpercent\space (ECI)]
 \component [c33_Chemie]
 \component [c35_Fußnoten]
 \component [c37_Bedingte_Übersetzung]
+%\component [c38_Mehrspaltensatz]
 \component [c39_Grafiken]
 \component [c41_Zitate]
 \component [c43_Literatur]
