\setupexternalfigures in env Datei

--- a/env_intro.tex
+++ b/env_intro.tex
@@ -46,6 +46,12 @@
 \setuplayout    [width=middle,  backspace=1.5in, cutspace=1.5in,
                  height=middle, topspace=0.75in, bottomspace=0.75in]
 
+
+%
+% Bilder im ConTeXt Verzeichnis finden.
+%
+\setupexternalfigures[location=default]
+
 %
 % Titelseite
 %
