Editoren mit ConTeXt Unterstützung.

--- a/Intro/c03_Installation.tex
+++ b/Intro/c03_Installation.tex
@@ -85,6 +85,22 @@ context dateiname.tex
 
 aufgerufen. Wenn es keine Fehler gibt, entsteht so eine PDF-Datei sowie ein paar Hilfsdateien.
 
+
+\startsubsection[title={Schreibwerkzeuge}]
+\index{Schreibwerkzeug, Editor}
+
+ConTeXt Dateien sind reine Textdateien, d.\,h. sie können mit jedem beliebigen Editor geschrieben werden.
+Neben den Klassikern \goto{Vim}[url(https://www.vim.org)] und \goto{Emacs}[url(https://https://www.gnu.org/software/emacs/)],
+die selbstverständlich eine Unterstützung für ConTeXt bieten, gibt es zwei weitere:
+
+\goto{SciTE}[url(https://www.scintilla.org)] läuft nur unter Windows, 
+\goto{Textadept}[url(https://foicica.com/textadept/)] gibt es auch für andere Betriebssysteme.
+
+Programme wie \type{TeXShop}, \type{TeXworks} und \type{TeXstudio} bieten nur eine Unterstützung für LaTeX,
+sind daher weniger hilfreich.
+
+\stopsubsection
+
 \stopsection
 
 \stopcomponent
