--- a/Intro/prd_intro.tex
+++ b/Intro/prd_intro.tex
@@ -24,7 +24,7 @@ intent=ISO coated v2 300\letterpercent\space (ECI)]
    author={Axel Kielhorn},
 %    date={Heute},
    ]
-\placecontent
+\placecontent[criterium=all]
 
 \component [c01_Vorwort]
 \component [c03_Installation]
