\setupbodyfont statt \definefontfamily.

--- a/env_intro.tex
+++ b/env_intro.tex
@@ -85,13 +85,11 @@
 %
 \setupbodyfont[11pt]
 %
-%\definefontfamily [antykwat] [serif] [AntykwaTorunska] [expansion=quality,protrusion=quality]
-%\definefontfamily [antykwat] [sans] [AntykwaTorunska] [expansion=quality,protrusion=quality]
-%\setupbodyfont[antykwat]
+% Antykwa Toruska
+%\setupbodyfont[antykwa]
 %
-%\definefontfamily [antykwap] [serif] [Antykwa Poltawskiego] [expansion=quality,protrusion=quality]
-%\definefontfamily [antykwap] [sans] [Antykwa Poltawskiego] [expansion=quality,protrusion=quality]
-%\setupbodyfont[antykwap]
+% Antykwa Poltawskiego
+%\setupbodyfont[antykwa-poltawskiego]
 %
 %\definefontfamily[latinfamily] [serif][Latin Modern Roman][expansion=quality,protrusion=quality]
 %\definefontfamily[latinfamily] [sans][Latin Modern Sans][expansion=quality,protrusion=quality]
@@ -99,25 +97,25 @@
 %\definefontfamily[latinfamily] [math][Latin Modern Math] % für itemize
 %\setupbodyfont[latinfamily,11pt]
 %
-%\definefontfamily[dejafamily] [serif][DejaVu Serif][expansion=quality,protrusion=quality]
-%\definefontfamily[dejafamily] [sans][DejaVu Sans][expansion=quality,protrusion=quality]
-%\definefontfamily[dejafamily] [mono][Dejavu Sans Mono][scale=0.85, features=none]
-%\definefontfamily[dejafamily] [math][DejaVu Math] % für itemize
-%\setupbodyfont[dejafamily,11pt]
+%\setupbodyfont[dejavu]
 %
 % TeX Gyre Adventor
-% TeX Gyre Schola
-% TeX Gyre Termes
 % TeX Gyre Bonum
 % TeX Gyre Chorus
+% TeX Gyre Cursor
 % TeX Gyre Heros
+% TeX Gyre Pagella
+% TeX Gyre Schola
+% TeX Gyre Termes
 %
-%\definefontfamily[pagellafamily] [serif][TeX Gyre Pagella][expansion=quality,protrusion=quality]
-%\definefontfamily[pagellafamily] [sans][TeX Gyre Heros][expansion=quality,protrusion=quality]
-%\definefontfamily[pagellafamily] [mono][][scale=0.85, features=none]
-%\definefontfamily[pagellafamily] [math][TeX Gyre Pagella Math] % für itemize
-%\setupbodyfont[pagellafamily,11pt]
-
+% \setupbodyfont[adventor]
+% \setupbodyfont[bonum]
+% \setupbodyfont[chorus]
+% \setupbodyfont[cursor]
+% \setupbodyfont[heros]
+% \setupbodyfont[pagella]
+% \setupbodyfont[schola]
+% \setupbodyfont[termes]
 % 
 % Layout mit typearea 
 %
